# argparsedirs

./: Pipfile  README.md  pyproject.toml  setup.py
argparsedirs/: __init__.py  argparsedirs.py
tests/: tests.py
